--- a/frontend/src/pages/Chat/Chat.module.scss
+++ b/frontend/src/pages/Chat/Chat.module.scss
@@ -40,3 +40,11 @@
   padding-left: min(20rem, max(2rem, 10%));
   padding-right: calc(min(20rem, max(2rem, 10%)) + 0.5rem);
 }
+
+.spinner {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
+}
